fix for user menu items being too low in the menu boxes

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -767,7 +767,7 @@ a.resourcesLink {
   vertical-align: middle;
   margin: 0;
   box-sizing: border-box;
-  padding:  10px 8px;
+  padding:  8px 8px;
 }
 .blockLink:hover {
   color: #333;
